added keyboard function

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     </div>
 
     <div class="container">
-        <button class="W">W</button>
-        <button class="A">A</button>
-        <button class="S">S</button>
-        <button class="D">D</button>
-        <button class="J">J</button>
-        <button class="K">K</button>
-        <button class="L">L</button>
+        <button class="drum W">W</button>
+        <button class="drum A">A</button>
+        <button class="drum S">S</button>
+        <button class="drum D">D</button>
+        <button class="drum J">J</button>
+        <button class="drum K">K</button>
+        <button class="drum L">L</button>
     </div>
 
 
